--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -11,7 +11,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for article in articles %}
+        {% for article in my_pager.currentPageResults %}
             <tr>
                 <td>{{ article.title }}</td>
                 <td>
@@ -21,4 +21,8 @@
         {% endfor %}
         </tbody>
     </table>
+
+    <div class="pagerfanta">
+        {#{{ pagerfanta(my_pager) }}#}
+    </div>
 {% endblock %}
