--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -10,6 +10,9 @@
                 <li class="nav-item">
                     <a href="/" class="nav-link">Home</a>
                 </li>
+                <li class="nav-item">
+                    <a href="/article/import_from_file" class="nav-link">File import</a>
+                </li>
             </ul>
         </div>
     </div>
